[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amoeba"
version = "0.1.0"
description = "This package is designed oto model agn variability self consistently, across all model components included."
readme = "README.rst"
authors = [
  {name = "Henry James Best V", email = "hbest@gradcenter.cuny.edu"}
]
maintainers = [
  {name = "Henry James Best V", email = "hbest@gradcenter.cuny.edu"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Henry-Best-01/amoeba/issues"
changelog = "https://github.com/Henry-Best-01/amoeba/blob/master/changelog.md"
homepage = "https://github.com/Henry-Best-01/amoeba"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

