[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "amoeba-agn"
version = "0.2.0"
description = "This package is designed to model agn variability self consistently across multiple models"
readme = "README.rst"
authors = [
  {name = "Henry James Best V", email = "hbest@gradcenter.cuny.edu"}
]
maintainers = [
  {name = "Henry James Best V", email = "hbest@gradcenter.cuny.edu"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3"
]
license = {text = "MIT license"}
dependencies = [
  "astropy", "numpy", "scipy", "scikit-image", "speclite"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/Henry-Best-01/amoeba/issues"
changelog = "https://github.com/Henry-Best-01/amoeba/blob/master/changelog.md"
homepage = "https://github.com/Henry-Best-01/amoeba"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
pythonpath = [
    ".", "src"
]



# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

